--- a/src/main/resources/com/example/demo/ListMenu.fxml
+++ b/src/main/resources/com/example/demo/ListMenu.fxml
@@ -33,7 +33,7 @@
                   <Font name="System Bold Italic" size="15.0" />
                </font>
             </Hyperlink>
-            <Hyperlink layoutX="295.0" layoutY="45.0" text="https://www.facebook.com/profile.php?id=100014733917879">
+            <Hyperlink layoutX="408.0" layoutY="45.0" text="https://www.facebook.com/datly.36">
                <font>
                   <Font name="System Bold Italic" size="15.0" />
                </font>
