--- a/src/main/resources/com/example/demo/ChangeCustomer.fxml
+++ b/src/main/resources/com/example/demo/ChangeCustomer.fxml
@@ -1,29 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ChangeCustomer">
+<AnchorPane prefHeight="514.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ChangeCustomer">
    <children>
-      <Label layoutX="83.0" layoutY="80.0" text="Username" AnchorPane.leftAnchor="74.0" />
-      <Label layoutX="88.0" layoutY="120.0" text="Sex" AnchorPane.leftAnchor="74.0" />
-      <Label layoutX="74.0" layoutY="160.0" text="Date of birth" AnchorPane.leftAnchor="74.0" />
-      <Label layoutX="86.0" layoutY="200.0" text="Address" AnchorPane.leftAnchor="74.0" />
-      <Label layoutX="83.0" layoutY="240.0" text="Phone number" AnchorPane.leftAnchor="74.0" />
-      <TextField fx:id="FullName" layoutX="236.0" layoutY="76.0" prefHeight="25.0" prefWidth="224.0" promptText="Username" />
-      <RadioButton fx:id="Male" layoutX="236.0" layoutY="120.0" mnemonicParsing="false" selected="true" text="Male">
-         <toggleGroup>
-            <ToggleGroup fx:id="SexGroup" />
-         </toggleGroup></RadioButton>
-      <RadioButton fx:id="Female" layoutX="348.0" layoutY="120.0" mnemonicParsing="false" text="Female" toggleGroup="$SexGroup" />
-      <TextField fx:id="DateOfBirth" layoutX="236.0" layoutY="156.0" prefHeight="25.0" prefWidth="224.0" promptText="2001-01-11" />
-      <TextField fx:id="Address" layoutX="236.0" layoutY="196.0" prefHeight="25.0" prefWidth="224.0" promptText="Address" />
-      <TextField fx:id="Phone" layoutX="236.0" layoutY="236.0" prefHeight="25.0" prefWidth="224.0" promptText="Phone number" />
-      <Button fx:id="Back" layoutX="236.0" layoutY="306.0" mnemonicParsing="false" onAction="#ActionBack" text="Back" />
-      <Button fx:id="Save" layoutX="406.0" layoutY="306.0" mnemonicParsing="false" onAction="#ActionSave" text="Save" AnchorPane.rightAnchor="140.0" />
+      <Text layoutX="207.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" 𝓒𝓾𝓼𝓽𝓸𝓶𝓮𝓻">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Text>
+      <Pane layoutX="81.0" layoutY="82.0" opacity="0.94" prefHeight="402.0" prefWidth="437.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
+         <effect>
+            <DropShadow />
+         </effect>
+         <children>
+            <HBox layoutX="100.0" layoutY="59.0" prefHeight="26.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="26.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/iconss8_user_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="FullName" prefHeight="26.0" prefWidth="243.0" promptText="Username" />
+               </children>
+            </HBox>
+            <HBox layoutX="100.0" layoutY="142.0" prefHeight="26.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="31.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_today_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="DateOfBirth" prefHeight="26.0" prefWidth="241.0" promptText="2001-01-11" />
+               </children>
+            </HBox>
+            <Pane layoutX="114.0" layoutY="88.0" prefHeight="61.0" prefWidth="112.0">
+               <children>
+                  <ImageView fitHeight="28.0" fitWidth="30.0" layoutX="15.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_man_64.png" />
+                     </image>
+                  </ImageView>
+                  <RadioButton fx:id="Male" layoutX="43.0" layoutY="22.0" mnemonicParsing="false" selected="true" text="Male">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="SexGroup" />
+                     </toggleGroup>
+                  </RadioButton>
+               </children>
+            </Pane>
+            <Pane layoutX="245.0" layoutY="88.0" prefHeight="61.0" prefWidth="121.0">
+               <children>
+                  <ImageView fitHeight="28.0" fitWidth="30.0" layoutX="7.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_woman_office_worker_64.png" />
+                     </image>
+                  </ImageView>
+                  <RadioButton fx:id="Female" layoutX="35.0" layoutY="21.0" mnemonicParsing="false" text="Female" toggleGroup="$SexGroup" />
+               </children>
+            </Pane>
+            <HBox layoutX="100.0" layoutY="186.0" prefHeight="26.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="31.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_google_maps_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="Address" prefHeight="26.0" prefWidth="243.0" promptText="Address" />
+               </children>
+            </HBox>
+            <HBox layoutX="100.0" layoutY="229.0" prefHeight="26.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="31.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_phone_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="Phone" prefHeight="26.0" prefWidth="242.0" promptText="Phone number" />
+               </children>
+            </HBox>
+            <Button fx:id="Back" layoutX="297.0" layoutY="300.0" mnemonicParsing="false" onAction="#ActionBack" text="Back" />
+            <Button fx:id="Save" layoutX="121.0" layoutY="300.0" mnemonicParsing="false" onAction="#ActionSave" text="Save" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
