--- a/src/main/resources/com/example/demo/ForgotPass.fxml
+++ b/src/main/resources/com/example/demo/ForgotPass.fxml
@@ -35,7 +35,7 @@
                     </font>
                 </Label>
                 <Button fx:id="Reset" layoutX="46.0" layoutY="218.0" mnemonicParsing="false" onAction="#ActionReset" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Reset" textFill="WHITE" />
-                <Button fx:id="BackLogin" layoutX="47.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+                <Button fx:id="BackLogin" layoutX="47.0" layoutY="260.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
             <HBox layoutX="36.0" layoutY="80.0" prefHeight="30.0" prefWidth="267.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
                <children>
                   <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
